<?xml version="1.0"?>
<package format="2">
    <name>snapshot</name>
    <version>0.0.1</version>
    <description>Package for visualizing and saving images</description>

    <maintainer email="quchao@seas.upenn.edu">chao</maintainer>
    <license>Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>

    <export>
    </export>
</package>
